# insightface-demo

./: README.md  demo.ipynb  pyproject.toml
src/: detect.py  embedding.py
