[project]
name = "InsightFace"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kevinchueh", email = "slime21023@gmail.com"},
]
dependencies = [
    "onnxruntime>=1.17.1",
    "insightface>=0.7.3",
    "cython>=3.0.10",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
